Olympus/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <picklist>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify existing account</description>
        <inlineHelpText>Captures existing account</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSFE_Address_ID__c</fullName>
        <label>Address ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Affiliated_Hospital_Cancer_Program__c</fullName>
        <label>Affiliated Hospital Cancer Program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Bariatric_Bypass__c</fullName>
        <label>Bariatric Bypass (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Account</description>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Business_Name__c</fullName>
        <label>Business Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Care_of_Location__c</fullName>
        <label>Care of Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Class_of_Trade_COT_Classification__c</fullName>
        <label>Class of Trade (COT) Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Class_of_Trade_COT_Facility_Type__c</fullName>
        <label>Class of Trade (COT) Facility Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Class_of_Trade_COT_Specialty__c</fullName>
        <label>Class of Trade (COT) Specialty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Colectomy_Energy_Procedures__c</fullName>
        <label>Colectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Colectomy_Open_Lab_SI__c</fullName>
        <label>Colectomy(Open/Lab) (SI) (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Community_Hospital__c</fullName>
        <label>Community Hospital</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Corporate_Parent_Name_IMS_Organizat__c</fullName>
        <description>Corporate Parent Name IMS Organizational ID</description>
        <inlineHelpText>Corporate Parent Name IMS Organizational ID</inlineHelpText>
        <label>Corporate Parent Name IMS Org ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Corporate_Parent_Name__c</fullName>
        <label>Corporate Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Credit_Availability_Percentage__c</fullName>
        <formula>IF(ISNULL(HSFE_Total_Credit_Line__c) || HSFE_Total_Credit_Line__c == 0, 0, HSFE_Total_Open_AR__c /HSFE_Total_Credit_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Availability Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HSFE_Credit_Availability__c</fullName>
        <formula>IF(HSFE_Credit_Availability_Percentage__c &lt; 0.75,IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Green&quot;), IF(HSFE_Credit_Availability_Percentage__c &lt; 0.99,IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;)))</formula>
        <label>Credit Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Credit_Risk__c</fullName>
        <description>Identifies Cash only or Bankrupt customers</description>
        <label>Credit Risk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Critical_Access_Hospital__c</fullName>
        <label>Critical Access Hospital</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Cystoscopy__c</fullName>
        <label>Cystoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_DBA__c</fullName>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Dedicated_Cysto_Suite__c</fullName>
        <label>Dedicated Cysto Suite</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Doing_Business_As_DBA_Name__c</fullName>
        <label>Doing Business As (DBA) Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Dx_Bronchoscopy__c</fullName>
        <label>Dx Bronchoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_EBUS_Surgical_Endocopy_Procedures__c</fullName>
        <label>EBUS (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_EBUS__c</fullName>
        <label>EBUS (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_ERCP_MP_ET__c</fullName>
        <label>ERCP (MP/ET) (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_EUS__c</fullName>
        <label>EUS (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Endometrial_Ablation__c</fullName>
        <label>Endometrial Ablation (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Enteroscopy_Procedures__c</fullName>
        <label>Enteroscopy Procedures (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Enteroscopy__c</fullName>
        <label>Enteroscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Esophageal_Capsule__c</fullName>
        <label>Esophageal Capsule (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_FESS__c</fullName>
        <label>FESS (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Fax__c</fullName>
        <label>Fax</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Federal_ID__c</fullName>
        <description>Captures the existing Federal ID</description>
        <label>Federal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_GPO_MedSurg_IMS_Organization_ID__c</fullName>
        <label>GPO MedSurg IMS Organizational ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_GPO_MedSurg__c</fullName>
        <label>GPO MedSurg</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Hysteroscopy__c</fullName>
        <label>Hysteroscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_IMS_ID__c</fullName>
        <description>Captures the legacy Sugar ID</description>
        <label>IMS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Is_FIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_JDE_Number__c</fullName>
        <description>Captures the legacy JDE Number</description>
        <label>JDE Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lap_Band__c</fullName>
        <label>Lap Band (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lap_Bariatric_SI__c</fullName>
        <label>Lap Bariatric (SI) (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lap_Chole_SI__c</fullName>
        <label>Lap Chole (SI) (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lap_Hyster_Oophorect__c</fullName>
        <label>Lap Hyster/Oophorect (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lap_Hysterectomy_Oophorectomy__c</fullName>
        <label>Lap Hysterectomy/Oophorectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Laryngoscopy__c</fullName>
        <label>Laryngoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lithoplaxy100__c</fullName>
        <label>Lithoplaxy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Lower_GI_MP_ET__c</fullName>
        <label>Lower GI (MP/ET) (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Mediastinoscopy__c</fullName>
        <label>Mediastinoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Medicare_ID__c</fullName>
        <description>Captures the existing Medicare ID</description>
        <label>Medicare ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Medicare_Provider_Number__c</fullName>
        <label>Medicare Provider Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Myringotomy__c</fullName>
        <label>Myringotomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_NPI_ID__c</fullName>
        <description>Captures the existing NPI ID</description>
        <label>NPI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Nephrectomy__c</fullName>
        <label>Nephrectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Nissen_Fundoplication__c</fullName>
        <label>Nissen Fundoplication (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Number_of_GI_Rooms__c</fullName>
        <label>Number of GI Rooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Number_of_Gynecologists__c</fullName>
        <label>Number of Gynecologists</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Number_of_Urologists__c</fullName>
        <label>Number of Urologists</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Open_Hysterectomy__c</fullName>
        <label>Open Hysterectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Ossicular_Chain_Reconstruction__c</fullName>
        <label>Ossicular Chain Reconstruction (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Owner_Status__c</fullName>
        <label>Owner Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Owner_Subsidiary_Name_IMS_Organizat__c</fullName>
        <description>Owner Subsidiary Name IMS Organization ID</description>
        <inlineHelpText>Owner Subsidiary Name IMS Organization ID</inlineHelpText>
        <label>Owner Subsidiary Name IMS Org ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Owner_Subsidiary_Name__c</fullName>
        <label>Owner Subsidiary Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_PCNL__c</fullName>
        <label>PCNL (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Payer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Account</description>
        <label>Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Payment_Terms__c</fullName>
        <description>Identifies Payment Terms</description>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Peripheral_Bronch__c</fullName>
        <label>Peripheral Bronch (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Peripheral_Bronchoscopy__c</fullName>
        <label>Peripheral Bronchoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Phone__c</fullName>
        <label>Phone</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Physical_Address_1__c</fullName>
        <label>Physical Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Physical_Address_2__c</fullName>
        <label>Physical Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Physical_City__c</fullName>
        <label>Physical City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Physical_State__c</fullName>
        <label>Physical State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Physical_Zip__c</fullName>
        <label>Physical Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Postal_Code_five_digit__c</fullName>
        <formula>LEFT( BillingPostalCode , 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code five digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Profit_Status__c</fullName>
        <label>Profit Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Prostate_Nephrectomy__c</fullName>
        <label>Prostate/Nephrectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Pulmonary_Navigation__c</fullName>
        <label>Pulmonary Navigation (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Rev_Mid_Ear__c</fullName>
        <label>Rev Mid Ear (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Rural_Hospital__c</fullName>
        <label>Rural Hospital</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_SAP_ID__c</fullName>
        <description>Used to identify existing account</description>
        <externalId>true</externalId>
        <label>SAP ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Account</description>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Sinus_Endo_DX__c</fullName>
        <label>Sinus Endo DX (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sleeve_Gastrectomy__c</fullName>
        <label>Sleeve Gastrectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Small_Bowl_Capsule__c</fullName>
        <label>Small Bowl Capsule (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sold_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Account</description>
        <label>Sold To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Solon_Capsule__c</fullName>
        <label>Solon Capsule (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Splenectomy__c</fullName>
        <label>Splenectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Stapedectomy__c</fullName>
        <label>Stapedectomy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Street_Front_Addresses__c</fullName>
        <label>Street Front Addresses</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sugar_ID__c</fullName>
        <description>Captures the legacy Sugar ID</description>
        <label>Sugar ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_TBNA__c</fullName>
        <label>TBNA (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_TURBT__c</fullName>
        <label>TURBT (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_TURP__c</fullName>
        <label>TURP (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Teaching_Hospital__c</fullName>
        <label>Teaching Hospital</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Thoracoscopy__c</fullName>
        <label>Thoracoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Tonsillectomy_Adenoids__c</fullName>
        <label>Tonsillectomy Adenoids (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Total_Credit_Line__c</fullName>
        <description>Identifies the Total Credit Line to calculate Credit Availability</description>
        <label>Total Credit Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Total_Open_AR__c</fullName>
        <label>Total Open AR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Total_Operating_Rooms__c</fullName>
        <label>Total Operating Rooms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Total_Staffed_Beds__c</fullName>
        <label>Total Staffed Beds</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Turb_Submucosa_Resect__c</fullName>
        <label>Turb Submucosa Resect (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Tx_Bronchoscopy__c</fullName>
        <label>Tx Bronchoscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_UID__c</fullName>
        <description>Captures the existing Universal ID</description>
        <label>UID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Upper_GI_MP_ET__c</fullName>
        <label>Upper GI (MP/ET) (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Ureteroscopy__c</fullName>
        <label>Ureteroscopy (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_VATS_Surgical_Endocopy_Procedures__c</fullName>
        <label>VATS (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_VATS__c</fullName>
        <label>VATS (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Website__c</fullName>
        <label>Website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Wedge_Resection__c</fullName>
        <label>Wedge Resection (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_pH_Testing__c</fullName>
        <label>pH Testing (IMS/SDI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Numbers__c</fullName>
        <label>NPI Numbers</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounts_in_my_Territory</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Team</filterScope>
        <label>Accounts in my Territory</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>GPO</fullName>
        <active>true</active>
        <label>GPO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>IDN</fullName>
        <active>true</active>
        <label>IDN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Rep</fullName>
        <active>true</active>
        <label>Sales Rep</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Name_field_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name != &quot;Prospect&quot;,ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>You can not change the field value.</errorMessage>
    </validationRules>
</CustomObject>